--- a/.project
+++ b/.project
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>samsung-app-nrk</name>
-	<comment>
-</comment>
-	<projects>
-	</projects>
+	<comment></comment>
+	<projects></projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
